Bug 484577 - KTorrent crashes in KStatusNotifierItem::setAssociatedWindow
Summary: KTorrent crashes in KStatusNotifierItem::setAssociatedWindow
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.1
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Joris Guisson
URL: https://bugs.gentoo.org/927460
Keywords:
: 485104 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-27 06:54 UTC by Julien Delquié
Modified: 2024-04-06 13:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02.2
Sentry Crash Report:


Attachments
ktorrent backtrace (11.28 KB, text/vnd.kde.kcrash-report)
2024-03-27 06:54 UTC, Julien Delquié
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Delquié 2024-03-27 06:54:50 UTC
Created attachment 167835 [details]
ktorrent backtrace

SUMMARY
When I try to launch ktorrent, it crashes.

STEPS TO REPRODUCE
1. try to run ktorrent

OBSERVED RESULT
$ ktorrent 
QLayout: Attempting to add QLayout "" to kt::FileView "", which already has a layout
KCrash: Application 'ktorrent' crashing... crashRecursionCounter = 2
[1]    6960 segmentation fault (core dumped)  ktorrent


EXPECTED RESULT
Works without issue.

SOFTWARE/OS VERSIONS
Operating System: Gentoo Linux 2.15
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.3
Kernel Version: 6.8.1-gentoo-x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-9700K CPU @ 3.60GHz
Memory: 31.3 Gio of RAM
Graphics Processor: AMD Radeon RX 7800 XT

ADDITIONAL INFORMATION
I already reported this there: https://bugs.gentoo.org/927460
I was told to report here.

A backtrace is attached.
Comment 1 Nicolas Fella 2024-03-27 14:59:50 UTC
#4  0x00007fa4184b1d81 in std::__uniq_ptr_impl<KStatusNotifierItemPrivate, std::default_delete<KStatusNotifierItemPrivate> >::_M_ptr (this=<optimized out>) at /usr/lib/gcc/x86_64-pc-linux-gnu/13/include/g++-v13/bits/unique_ptr.h:199
#5  std::unique_ptr<KStatusNotifierItemPrivate, std::default_delete<KStatusNotifierItemPrivate> >::get (this=<optimized out>) at /usr/lib/gcc/x86_64-pc-linux-gnu/13/include/g++-v13/bits/unique_ptr.h:470
#6  std::unique_ptr<KStatusNotifierItemPrivate, std::default_delete<KStatusNotifierItemPrivate> >::operator-> (this=<optimized out>) at /usr/lib/gcc/x86_64-pc-linux-gnu/13/include/g++-v13/bits/unique_ptr.h:463
#7  KStatusNotifierItem::setAssociatedWindow (this=0x0, associatedWindow=0x55883ba0eed0) at /usr/src/debug/kde-frameworks/kstatusnotifieritem-6.0.0/kstatusnotifieritem-6.0.0/src/kstatusnotifieritem.cpp:497
#8  0x00005588395bbbbd in kt::TrayIcon::setAssociatedWindow (this=this@entry=0x55883b6e3290, window=<optimized out>) at /usr/src/debug/net-p2p/ktorrent-24.02.1/ktorrent-24.02.1/ktorrent/trayicon.cpp:425
#9  0x00005588395b6471 in kt::GUI::GUI (this=0x7ffdf668ce50, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/net-p2p/ktorrent-24.02.1/ktorrent-24.02.1/ktorrent/gui.cpp:114
#10 0x000055883959ecff in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/net-p2p/ktorrent-24.02.1/ktorrent-24.02.1/ktorrent/main.cpp:227
Comment 2 Bug Janitor Service 2024-03-28 22:30:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/ktorrent/-/merge_requests/118
Comment 3 Julien Delquié 2024-03-29 07:02:18 UTC
I just applied this patch, no more crash, thank you very much!
Comment 4 Nicolas Fella 2024-03-29 10:28:05 UTC
Git commit 23b59c8b74aeae71da8f4b7a20da5410a6bc8de6 by Nicolas Fella.
Committed on 29/03/2024 at 10:24.
Pushed by nicolasfella into branch 'master'.

Fix crash when system tray icon is disabled

M  +3    -1    ktorrent/trayicon.cpp

https://invent.kde.org/network/ktorrent/-/commit/23b59c8b74aeae71da8f4b7a20da5410a6bc8de6
Comment 5 Nicolas Fella 2024-04-06 13:03:46 UTC
Git commit c441c2bcda58f08185a6c0ee5498e0f8baf9b68b by Nicolas Fella.
Committed on 06/04/2024 at 13:03.
Pushed by nicolasfella into branch 'release/24.02'.

Fix crash when system tray icon is disabled
(cherry picked from commit 23b59c8b74aeae71da8f4b7a20da5410a6bc8de6)

M  +3    -1    ktorrent/trayicon.cpp

https://invent.kde.org/network/ktorrent/-/commit/c441c2bcda58f08185a6c0ee5498e0f8baf9b68b
Comment 6 Nicolas Fella 2024-04-06 13:04:03 UTC
*** Bug 485104 has been marked as a duplicate of this bug. ***