Fix crash when system tray icon is disabled

BUG: 484577
(cherry picked from commit 23b59c8b74aeae71da8f4b7a20da5410a6bc8de6)